--- a/blogicum/templates/includes/post_card.html
+++ b/blogicum/templates/includes/post_card.html
@@ -22,6 +22,17 @@
       <p class="card-text">{{ post.text|truncatewords:10 }}</p>
       <a href="{% url 'blog:post_detail' post.id %}" class="card-link">Читать полный текст</a>
       <a href="{% url 'blog:post_detail' post.id %}" class="card-link text-muted">Комментарии ({{ post.comment_count }})</a>
+      {% with total_likes=post.users_like.count %}
+      <div>
+        <h5>
+          <span class="badge text-bg-light">
+            {{ total_likes }} 
+            like{{ total_likes|pluralize }}
+          </span>
+        </h5>  
+      </div>
+      {% endwith %}
+        
       
     </div>
   </div>
