--- a/blogicum/templates/includes/post_card.html
+++ b/blogicum/templates/includes/post_card.html
@@ -27,7 +27,7 @@
       <div>
         <span class="count">
         <span id="{{ post.id }}" >{{ total_likes }}</span>
-        like{{ total_likes|pluralize }}
+        
         </span>
           {% if request.user.is_authenticated %}
             <a 
@@ -35,7 +35,7 @@
             data-id="{{ post.id }}" 
             data-action="{% if request.user in users_like %}un{% endif %}like" 
             data-url="{% url 'blog:like' %}"
-            class="like button"
+            class="btn btn-light"
             >
             {% if request.user not in users_like %}
             👍
