--- a/blogicum/templates/includes/post_card.html
+++ b/blogicum/templates/includes/post_card.html
@@ -25,10 +25,6 @@
       
       {% with total_likes=post.users_like.count users_like=post.users_like.all %}
       <div>
-        <span class="count">
-        <span id="{{ post.id }}" >{{ total_likes }}</span>
-        
-        </span>
           {% if request.user.is_authenticated %}
             <a 
             href="javascript:void(0);" 
@@ -38,12 +34,15 @@
             class="btn btn-light"
             >
             {% if request.user not in users_like %}
-            👍
+            🤍
             {% else %}
-            👎
+            ❤️
             {% endif %}
             </a>
           {% endif %}
+          <span class="btn btn-light">
+            <span id="{{ post.id }}" >{{ total_likes }}</span>
+          </span>
       </div>
       {% endwith %}
     </div>
