add comment like

--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -38,6 +38,7 @@
           </div>
         {% endif %}
         {% include "includes/comments.html" %}
+        <script src="{% static 'js/commentlikeButton.js' %}" defer></script>
       </div>
     </div>
   </div>
