--- a/blogicum/templates/includes/comments.html
+++ b/blogicum/templates/includes/comments.html
@@ -20,6 +20,30 @@
       <br>
       {{ comment.text|linebreaksbr }}
     </div>
+    {% with total_likes=comment.users_like.count users_like=comment.users_like.all %}
+      <div>
+        {% if request.user.is_authenticated %}
+          <a 
+            href="javascript:void(0);" 
+            data-id="{{ comment.id }}" 
+            data-action="{% if request.user in users_like %}un{% endif %}like" 
+            data-url="{% url 'blog:comment_like' %}"
+            class="btn btn-light"
+          >
+        {% if request.user not in users_like %}
+          🤍
+        {% else %}
+          ❤️
+        {% endif %}
+          </a>
+        {% endif %}
+          <span class="btn btn-light">
+          <span id="{{ comment.id }}" >{{ total_likes }}</span>
+          </span>
+      </div>
+    {% endwith %}
+
+
     {% if user == comment.author %}
       <a class="btn btn-sm text-muted" href="{% url 'blog:edit_comment' post.id comment.id %}" role="button">
         Отредактировать комментарий
