--- a/blogicum/templates/blog/profile.html
+++ b/blogicum/templates/blog/profile.html
@@ -12,18 +12,30 @@
       <li class="list-group-item text-muted">Роль: {% if profile.is_staff %}Админ{% else %}Пользователь{% endif %}</li>
     </ul>
     {% with total_followers=user.followers.count %}
-    <span class="count">
-      <span class="total">{{ total_followers }}</span>
-      follower{{ total_followers|pluralize }}
-    </span>
-    <a href="#" data-id="{{ user.id }}" data-action="{% if request.user in user.followers.all %}un{% endif %}follow" class="follow button">
-      {% if request.user not in user.followers.all %}
-        Follow
-      {% else %}
-        Unfollow
-      {% endif %}
-      {% endwith %}
-    </a>
+    <div class="col d-flex justify-content-center">
+      <div class="card" style="width: 44rem;">
+        <div class="card-body">
+          <span class="count">
+          <span class="total">{{ total_followers }}</span>
+            follower{{ total_followers|pluralize }}
+          </span>
+            <a href="javascript:void(0);" 
+               data-id="{{ user.id }}" 
+               data-action="{% if request.user in user.followers.all %}un{% endif %}follow"
+               data-url="{% url 'blog:user_follow' %}" 
+               class="follow button">
+            {% if request.user not in user.followers.all %}
+            Follow
+            {% else %}
+            Unfollow
+            {% endif %}
+            </a>
+        </div>
+      </div>
+    </div>
+    <script src="//cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+    <script src="{% static 'js/followButton.js' %}"></script>
+    {% endwith %}
     <ul class="list-group list-group-horizontal justify-content-center">
       {% if user.is_authenticated and request.user == profile %}
       <a class="btn btn-sm text-muted" href="{% url 'blog:edit_profile' %}">Редактировать профиль</a>
@@ -41,3 +53,4 @@
   <script src="{% static 'js/likeButton.js' %}" defer></script>
   {% include "includes/paginator.html" %}
 {% endblock %}
+
